@@ -1609,8 +1609,16 @@ extern void initOptions (void)
     OptionFiles = stringListNew ();
     verbose ("Setting option defaults\n");
     installHeaderListDefaults ();
-    verbose ("    Installing default language mappings:\n");
+    verbose ("  Installing default language mappings:\n");
     installLanguageMapDefaults ();
+
+    /* always excluded by default */
+    verbose ("  Installing default exclude patterns:\n");
+    processExcludeOption (NULL, "EIFGEN");
+    processExcludeOption (NULL, "SCCS");
+    processExcludeOption (NULL, "RCS");
+    processExcludeOption (NULL, "CVS");
+
 }
 
 extern void freeOptionResources (void)
